--- a/src/assets/styles/app.scss
+++ b/src/assets/styles/app.scss
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Libre+Baskerville");
-@import url('https://fonts.googleapis.com/css?family=Poppins:200,400,400i,600');
+@import url("https://fonts.googleapis.com/css?family=Poppins:200,400,400i,600");
 
-@import '../node_modules/normalize.css/normalize.css';
-@import './variables.scss';
-@import './typography.scss';
-@import './transitions.scss';
+@import "../node_modules/normalize.css/normalize.css";
+@import "./variables.scss";
+@import "./typography.scss";
+@import "./transitions.scss";
 
-html, body, #app {
+html,
+body,
+#app {
   margin: 0;
   padding: 0;
   font-weight: 400;
@@ -15,12 +17,14 @@ html, body, #app {
 
 html {
   height: 100%;
+  font-size: 18px;
 }
 
 body {
   min-height: 100%;
   display: flex;
   flex-direction: column;
+  font-size: 18px;
 }
 
 #app {
@@ -32,7 +36,8 @@ ul {
   list-style-type: none;
 }
 
-ul, ol {
+ul,
+ol {
   padding: 0;
   margin: 0 0 $base-spacing;
   line-height: 1.5em;
@@ -89,8 +94,10 @@ li {
 
 /* utilities */
 
-[v-cloak] {display: none}
+[v-cloak] {
+  display: none;
+}
 
 .Draw {
-  @include draw
+  @include draw;
 }
